k8s/agent-daemonset.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: drone-agent
  namespace: drone
  labels:
    app: drone
    component: agent
spec:
  template:
    metadata:
      labels:
        app: drone
        component: agent
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: drone-agent
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: docker-graph-storage
          emptyDir: {}
      containers:
      - name: drone-agent
        image: docker.io/drone/agent:0.8.1
        imagePullPolicy: IfNotPresent
        resources: {}
      - name: drone-dind
        image: docker:18.01.0-dind
        securityContext:
            privileged: true
        volumeMounts:
          - name: docker-graph-storage
            mountPath: /var/lib/docker
        resources: {}
