k8s/server-internal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: drone-server
  namespace: drone
  labels:
    app: drone
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 9000
    targetPort: 9000
  selector:
    app: drone
    component: server
