k8s/server-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: drone-web
  namespace: drone
  labels:
    app: drone
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: drone
    component: server
